# audio-plugin-metadata

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
src/: arch.rs  lib.rs  lib_loader.rs  scan.rs  types.rs  utils.rs  vst2.rs  vst3.rs
src/vst2/: types.rs
src/vst3/: types.rs
