[package]
name = "audio-plugin-metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8.6"
thiserror = "2.0.12"
vst2-sys = "0.2.0"
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }
walkdir = "2.5.0"
windows-sys = { version = "0.59.0", features = ["Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug"] }
