[package]
name = "audio-plugin-metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
libloading = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
vst2-sys = "0.2.0"
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }
walkdir = "2.5.0"
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }
